@@ -13,9 +13,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>INTER-Mediator - Sample - Calcuration for Debugging/MySQL</title>
+    <title>INTER-Mediator - Sample - Calcuration for Debugging/FileMaker Server</title>
     <link rel="stylesheet" type="text/css" href="../sample.css">
-    <script type="text/javascript" src="calctest1.php"></script>
+    <script type="text/javascript" src="calctest1_FMS.php"></script>
     <script type="text/javascript" src="calctest1.js"></script>
 </head>
 <body>
