@@ -13,8 +13,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" type="text/css" href="../sample.css">
-    <title>INTER-Mediator - Sample - Search for Debugging/MySQL</title>
-    <script type="text/javascript" src="include_MySQL.php"></script>
+    <title>INTER-Mediator - Sample - Search for Debugging/FileMaker Server</title>
+    <script type="text/javascript" src="include_FMS.php"></script>
     <script type="text/javascript" src="search.js"></script>
 </head>
 <body>
