@@ -170,7 +170,11 @@
             <a href="Sample_forDebugging/contexttest.html">context-test</a>
             <a href="Sample_forDebugging/deltest.html">logical delete</a>
         </td>
-        <td></td>
+        <td>
+            <a href="Sample_forDebugging/search_FMS.html">search1</a>
+            <a href="Sample_forDebugging/calctest1_FMS.html">calctest1</a>
+            <a href="Sample_forDebugging/postonlytest_FMS.html">postonly</a>
+        </td>
         <td></td>
         <td></td>
     </tr>
